--- a/stock_reserve_sale/view/sale.xml
+++ b/stock_reserve_sale/view/sale.xml
@@ -4,7 +4,7 @@
 <record id="view_order_form_reserve" model="ir.ui.view">
     <field name="name">sale.order.form.reserve</field>
     <field name="model">sale.order</field>
-    <field name="inherit_id" ref="sale_stock.view_order_form_inherit_sale_stock"/>
+    <field name="inherit_id" ref="sale.view_order_form"/>
     <field name="arch" type="xml">
         <button name="action_quotation_send" position="before">
             <field name="is_stock_reservable" invisible="1"/>
@@ -15,10 +15,6 @@
                 attrs="{'invisible': [('is_stock_reservable', '=', False)]}"
                 />
         </button>
-
-        <field name="order_line" position="attributes">
-            <attribute name="options">{"reload_on_button": 1}</attribute>
-        </field>
 
         <xpath expr="//field[@name='order_line']/form//field[@name='state']" position="before">
             <field name="reservation_ids" invisible="1"/>
@@ -40,12 +36,12 @@
             <button name="%(action_sale_stock_reserve)d"
                 type="action"
                 string="Reserve Stock"
-                icon="terp-locked"
+                icon="fa-lock"
                 attrs="{'invisible': [('is_stock_reservable', '=', False)]}" />
             <button name="release_stock_reservation"
                 type="object"
                 string="Release Reservation"
-                icon="gtk-undo"
+                icon="fa-unlock"
                 attrs="{'invisible': [('reservation_ids', '=', [])]}" />
         </xpath>
 
