--- a/stock_reserve_sale/view/sale.xml
+++ b/stock_reserve_sale/view/sale.xml
@@ -18,16 +18,15 @@
 
         <xpath expr="//field[@name='order_line']/form//field[@name='state']" position="before">
             <field name="reservation_ids" invisible="1"/>
+            <field name="is_stock_reservable" invisible="1"/>
             <button name="%(action_sale_stock_reserve)d"
                 type="action"
                 string="Reserve Stock"
-                attrs="{'invisible': ['|', ('reservation_ids', '!=', []),
-                                           ('state', '!=', 'draft')]}" />
+                attrs="{'invisible': [('is_stock_reservable', '=', False)]}" />
             <button name="release_stock_reservation"
                 type="object"
                 string="Release Reservation"
-                attrs="{'invisible': ['|', ('reservation_ids', '=', []),
-                                           ('state', '!=', 'draft')]}" />
+                attrs="{'invisible': [('reservation_ids', '=', [])]}" />
         </xpath>
 
         <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="after">
